update modal in index page

--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
 								</li>
 								<li>
 									<a href="classes.html" class="fh5co-sub-ddown">Classes</a>
-									 <ul class="fh5co-sub-menu">
+									 <!-- <ul class="fh5co-sub-menu">
 									 	<li><a href="left-sidebar.html">Web Development</a></li>
 									 	<li><a href="right-sidebar.html">Branding &amp; Identity</a></li>
 										<li>
@@ -98,7 +98,7 @@
 										<li><a href="#">UI Animation</a></li>
 										<li><a href="#">Copywriting</a></li>
 										<li><a href="#">Photography</a></li> 
-									</ul>
+									</ul> -->
 								</li>
 								<li>
 									<a href="schedule.html">Schedule</a>
@@ -137,12 +137,12 @@
 							<h3 class="section-title">Our Address</h3>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 							<ul class="contact-info">
-								<li><i class="icon-location-pin"></i>[Elevate Fit Club]
+								<li><i class="icon-location-pin"></i>Elevate Fit Club
 									123 Fitness Street, Wellness Avenue
 									Mumbai, Maharastra 400005</li>
 								<li><i class="icon-phone2"></i>+91 98765 43210</li>
-								<li><i class="icon-mail"></i><a href="#">info@[yourfitnesswebsite].com</a></li>
-								<li><i class="icon-globe2"></i><a href="#">www.[yourfitnesswebsite].com</a></li>
+								<li><i class="icon-envelope"></i><a href="#">info@Elevate Fit Club.com</a></li>
+								<li><i class="icon-globe2"></i><a href="#">www.Elevate Fit Club.com</a></li>
 							</ul>
 						</div>
 						<div class="col-md-6 animate-box">
@@ -190,12 +190,12 @@
 						<div class="col-md-4 animate-box">
 							<h3 class="section-title">Our Address</h3>
 							<ul class="contact-info">
-								<li><i class="icon-map-marker"></i>[Elevate Fit Club]
+								<li><i class="icon-map-marker"></i>Elevate Fit Club
 									123 Fitness Street, Wellness Avenue
 									Mumbai, Maharastra 400005</li>
 								<li><i class="icon-phone"></i>+91 98765 43210</li>
-								<li><i class="icon-envelope"></i><a href="#">info@[yourfitnesswebsite].com</a></li>
-								<li><i class="icon-globe2"></i><a href="#">www.[yourfitnesswebsite].com</a></li>
+								<li><i class="icon-envelope"></i><a href="#">info@Elevate Fit Club.com</a></li>
+								<li><i class="icon-globe2"></i><a href="#">www.Elevate Fit Club.com</a></li>
 							</ul>
 						</div>
 						<div class="col-md-4 animate-box">
