--- a/about.html
+++ b/about.html
@@ -86,14 +86,14 @@
 									 	<li><a href="right-sidebar.html">Branding &amp; Identity</a></li>
 										<li>
 											<a href="#" class="fh5co-sub-ddown">Free HTML5</a>
-											<ul class="fh5co-sub-menu">
+											<!-- <ul class="fh5co-sub-menu">
 												<li><a href="http://freehtml5.co/preview/?item=build-free-html5-bootstrap-template" target="_blank">Build</a></li>
 												<li><a href="http://freehtml5.co/preview/?item=work-free-html5-template-bootstrap" target="_blank">Work</a></li>
 												<li><a href="http://freehtml5.co/preview/?item=light-free-html5-template-bootstrap" target="_blank">Light</a></li>
 												<li><a href="http://freehtml5.co/preview/?item=relic-free-html5-template-using-bootstrap" target="_blank">Relic</a></li>
 												<li><a href="http://freehtml5.co/preview/?item=display-free-html5-template-using-bootstrap" target="_blank">Display</a></li>
 												<li><a href="http://freehtml5.co/preview/?item=sprint-free-html5-template-bootstrap" target="_blank">Sprint</a></li>
-											</ul>
+											</ul> -->
 										</li>
 										<li><a href="#">UI Animation</a></li>
 										<li><a href="#">Copywriting</a></li>
@@ -327,12 +327,12 @@
 						<div class="col-md-4 animate-box">
 							<h3 class="section-title">Our Address</h3>
 							<ul class="contact-info">
-								<li><i class="icon-map-marker"></i>[Elevate Fit Club]
+								<li><i class="icon-map-marker"></i>Elevate Fit Club
 									123 Fitness Street, Wellness Avenue
 									Mumbai, Maharastra 400005</li>
 								<li><i class="icon-phone"></i>+91 98765 43210</li>
-								<li><i class="icon-envelope"></i><a href="#">info@[yourfitnesswebsite].com</a></li>
-								<li><i class="icon-globe2"></i><a href="#">www.[yourfitnesswebsite].com</a></li>
+								<li><i class="icon-envelope"></i><a href="#">info@Elevate Fit Club.com</a></li>
+								<li><i class="icon-globe2"></i><a href="#">www.Elevate Fit Club.com</a></li>
 							</ul>
 						</div>
 						<div class="col-md-4 animate-box">
@@ -356,7 +356,7 @@
 							</form>
 						</div>
 					</div>
-					<div class="row copy-right">
+					<!-- <div class="row copy-right">
 						<div class="col-md-6 col-md-offset-3 text-center">
 							<p class="fh5co-social-icons">
 								<a href="#"><i class="icon-twitter2"></i></a>
@@ -367,7 +367,7 @@
 							</p>
 							<p>Copyright 2016 Free Html5 <a href="#">Fitness</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> / Demo Images: <a href="https://unsplash.com/" target="_blank">Unsplash</a></p>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</footer>
