modal edit in about us

--- a/contact.html
+++ b/contact.html
@@ -130,8 +130,7 @@
 		<div id="fh5co-contact">
 			<div class="container">
 				<form action="https://api.web3forms.com/submit" method="POST">
-					<input type="hidden" name="access_key" value="a6229aaf-c553-4d55-9327-1e59f6df59d2
-					">
+					
 					<div class="row">
 						<div class="col-md-6 animate-box">
 							<h3 class="section-title">Our Address</h3>
@@ -149,6 +148,8 @@
 							<div class="row">
 								<div class="col-md-6">
 									<div class="form-group">
+										<input type="hidden" name="access_key" value="81f09310-1582-4bfa-9d66-7c3acc3f5dc2
+					">
 										<input type="text" class="form-control" name="name" placeholder="Name">
 									</div>
 								</div>
@@ -175,7 +176,7 @@
 		</div>
 		<!-- END fh5co-contact -->
 		<div id="map" class="fh5co-map">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3721.7931486953166!2d79.04507517485175!3d21.12081138055161!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4c07671017899%3A0x2cbfd7b43417b86c!2sXceller%20IT%20Services!5e0!3m2!1sen!2sin!4v1727293590992!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7443.09815708158!2d79.03802493050934!3d21.1305362!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4c061552a1fad%3A0xdf450ca32f23d929!2sFITNESS%20CLUB%20GYM!5e0!3m2!1sen!2sin!4v1727764891726!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</div>
 		<!-- END map -->
 		<footer>
