--- a/index.html
+++ b/index.html
@@ -723,8 +723,7 @@
 		</div>
 		<!-- body pricing end -->
 	</div>
-	</div>
-	</div>
+
 
 	<!-- body cycling start -->
 	<div class="modal fade " id="cycling" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -1049,32 +1048,32 @@
 					<h2 class="modal-title" id="exampleModalLabel"><b>MASSAGE PROGRAM</b></h2>
 				</div>
 				<div class="modal-body">
-					<h3><b>Swimming Program Details</b></h3>
+					<h3><b>Massage Program Details</b></h3>
 
-					<p><strong>Dive Into Fitness!</strong></p>
-					<p>Our Swimming program is designed to improve your cardiovascular fitness, build endurance, and
-						enhance your swimming skills. Whether you’re a beginner or an advanced swimmer, our classes will
-						help you become more confident in the water while getting a full-body workout.</p>
+					<p><strong>Relax and Rejuvenate!</strong></p>
+					<p>Our Massage program is designed to provide you with a holistic approach to relaxation and
+						recovery. Whether you seek relief from tension, pain, or simply want to unwind, our experienced
+						therapists will tailor each session to meet your individual needs.</p>
 
-					<h3><b>Class Schedule:</b></h3>
+					<h3><b>Session Schedule:</b></h3>
 					<ul class="list-group">
-						<li class="list-group-item"><strong>Duration:</strong> 45 minutes</li>
-						<li class="list-group-item"><strong>Frequency:</strong> 3 sessions per week</li>
+						<li class="list-group-item"><strong>Duration:</strong> 60 minutes</li>
+						<li class="list-group-item"><strong>Frequency:</strong> Flexible scheduling</li>
 						<li class="list-group-item"><strong>Available Time Slots:</strong>
 							<ul>
-								<li>Monday, Wednesday, Friday: 7 AM - 7:45 AM</li>
-								<li>Tuesday, Thursday: 6 PM - 6:45 PM</li>
+								<li>Monday to Friday: 10 AM - 8 PM</li>
+								<li>Saturday: 10 AM - 5 PM</li>
 							</ul>
 						</li>
 					</ul>
 
 					<h3><b>What to Expect:</b></h3>
 					<ul class="list-group">
-						<li class="list-group-item">Warm-up and cooldown routines</li>
-						<li class="list-group-item">Swimming techniques for all levels</li>
-						<li class="list-group-item">Endurance-building drills and workouts</li>
-						<li class="list-group-item">Fun and engaging water activities</li>
-						<li class="list-group-item">Personalized coaching and feedback</li>
+						<li class="list-group-item">Personalized massage techniques tailored to your needs</li>
+						<li class="list-group-item">Options for Swedish, Deep Tissue, or Aromatherapy massage</li>
+						<li class="list-group-item">Soothing environment with calming music</li>
+						<li class="list-group-item">Post-session relaxation and hydration advice</li>
+						<li class="list-group-item">Professional and certified therapists</li>
 					</ul>
 
 
